--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,9 @@ torch>=2.0.0
 # Security
 cryptography>=42.0.0
 
+# Production server
+gunicorn>=21.2.0
+
 # Development tools (uncomment if needed)
 # black>=24.0.0
 # flake8>=7.0.0
