Fix: Resolve Vercel deployment issues with Python runtime

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
+  "functions": {
+    "wsgi.py": {
+      "runtime": "python3.11"
+    }
+  },
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/wsgi.py"
     }
-  ],
-  "env": {
-    "FLASK_ENV": "production"
-  }
+  ]
 } 
