Système de traduction complet v4.0 - 776 traductions avec corrections majeures EN/FR

--- a/.gitignore
+++ b/.gitignore
@@ -100,4 +100,10 @@ instance/
 .cache/
 .mypy_cache/
 .dmypy.json
-dmypy.json 
+dmypy.json
+
+# Additional files to ignore
+cookies.txt
+nul
+*.pid
+*.lock 
